--- a/infrastructure/docker/app/Dockerfile
+++ b/infrastructure/docker/app/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:24-bookworm-slim
 
 RUN apt update && apt install -y curl bash sudo && \
-    npm install -g npm@10.9.0 serverless@3.37.0 serverless-cloudflare-workers@1.1.0 serverless-offline@12.0.0
+    npm install -g npm@10.9.0 serverless@3.37.0 serverless-cloudflare-workers@1.1.0 serverless-offline@12.0.0 npx
 
 # 非rootユーザーで実行するために、nodeユーザーをsudoersに追加
 RUN which bash && bash --version && cat /etc/passwd && \
