--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,15 +4,13 @@ services:
       context: .
       dockerfile: infrastructure/docker/app/Dockerfile
       args:
-        - USER_NAME=${USER_NAME:-node}
+        - USER_NAME=${USER_NAME:-app}
         - USER_ID=${USER_ID:-1000}
         - GROUP_ID=${GROUP_ID:-1000}
     ports:
       - 3000:3000
     volumes:
       - ./src:/app
-    env_file:
-      - .env
     environment:
       - USER_NAME=${USER_NAME}
       - USER_ID=${USER_ID}
